@@ -1,3 +1,7 @@
+2009-09-04 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add Pyunit tests for the Python interface.
+
 2009-07-29 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add (yet incomplete) Python interface.
